# sashaslides

./: .bazelrc  .gitignore  BUILD  CLAUDE.md  Dockerfile  Dockerfile.vllm  README.md  WORKSPACE  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_lock.txt
.auth/: generate-token.ts
.claude/skills/: caveman.md  composer-build.md  composer-build.sh  composer-test.md  composer-test.sh  e2e-test.md  e2e-test.sh  html2googleslides.md  layout-match-slides.md  layout-match-slides.sh  push-slides.md  push-slides.sh  rate-slides.md  rate-slides.sh  redraw-graphs.md  redraw-graphs.sh  screenshot-slides.md  screenshot-slides.sh  whiteboard-presentation.md  whiteboard-presentation.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/claude-code/: Dockerfile  devcontainer.json  setup-claude.sh  start-chrome.sh
.github/readme/: SKILL.md
analysis/: README.md  package.json
analysis/layout-matching/: README.md  ground-truth.json
analysis/presentations/: manifest.json
analysis/prompts/: candidate-1-decompose.md  candidate-2-persona.md  candidate-3-generative.md  reconstruct.md  shared-rules.md
analysis/renderer/: eval-renderer.ts  html-to-slides.ts  package-lock.json  (+1 more)
proto/: BUILD  __init__.py  sashaslides.proto
research/: 01-manus-architecture.md  02-academic-literature.md  03-open-source-components.md  04-proposed-architecture.md  05-in-browser-vlm-shortlist.md  06-presentation-design-rules-and-template-matching.md  README.md
sashaslides/: BUILD  __init__.py
website/: BUILD  index.html  style.css
(+518 files in other folders)
