[project]
name = "sashaslides"
version = "0.1.0"
description = "SashaSlides - AI-powered presentation slide generator bot"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["proto.*", "google.*", "googleapiclient.*"]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["sashaslides"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
